add i18n to edit_alarm.dart and alarms.dart

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,3 +1,22 @@
 {
-  "test": "jopa"
+  "appbar.edit_alarm.tooltip": "Edit alarm",
+  "appbar.alarms.title": "Alarms",
+  "appbar.alarms.tooltip": "Add new alarm",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": ""
 }
