--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -1,22 +1,16 @@
 {
-  "appbar.edit_alarm.tooltip": "Edit alarm",
-  "appbar.alarms.title": "Alarms",
-  "appbar.alarms.tooltip": "Add new alarm",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": "",
-  "": ""
+  "appbar.edit_alarm.tooltip": "Edit alarm1",
+  "appbar.alarms.title": "Alarms1",
+  "appbar.alarms.tooltip": "Add new alarm1",
+  "screen.add_alarm.title": "Add Alarm1",
+  "screen.edit_alarm.title": "Edit Alarm1",
+  "alarm_tile.delete_btn.tooltip": "Delete alarm1",
+  "alarm_tile.edit_btn.tooltip": "Edit alarm1",
+  "appbar.done_btn.tooltip": "Save all alarms1",
+  "appbar.edit_btn.tooltip": "Edit all alarms1",
+  "undo_snackbar.alarm_deleted.content": "Alarm deleted1",
+  "undo_snackbar.action.label": "UNDO1",
+  "navbar.bottom.access_alarms.title": "Alarms1",
+  "navbar.bottom.groups.title": "Groups1",
+  "navbar.bottom.settings.title": "Settings1"
 }
